--- a/BLAZAM/Shared/UI/SearchPageHeader.razor
+++ b/BLAZAM/Shared/UI/SearchPageHeader.razor
@@ -1,52 +1,80 @@
 @inherits AppComponentBase
-<Form @onsubmit="(()=>{OnSubmit.InvokeAsync();})">
+<Form @onsubmit="(()=>{SearchService.Search();})">
 
     <Bar Mode="BarMode.Horizontal"
          CollapseMode="BarCollapseMode.Small"
          Breakpoint="Breakpoint.Desktop"
          NavigationBreakpoint="Breakpoint.Tablet"
-         ThemeContrast="ThemeContrast.Light"
+         ThemeContrast="ThemeContrast.Dark"
          Padding="Padding.Is2.OnX"
-         Background="Background.Secondary"
+         Background="Background.Dark"
          TextColor="TextColor.Dark"
          VerticalAlignment="VerticalAlignment.Middle">
         <BarBrand Padding=Padding.Is0.OnY Width="Width.Is100">
-            <Row Style="font-size:0.8em;">
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is2.OnFullHD.Is2.OnDesktop.Is3.OnTablet">
-                    <Div TextOverflow="TextOverflow.Wrap">
-                        <Div Display="Display.InlineBlock">@Text</Div>
-                        <Div Display="Display.InlineBlock">
-                            <DropdownList Color=Color.Primary @bind-SelectedValue=@SelectedObjectType TItem="ActiveDirectoryObjectType?" TValue=ActiveDirectoryObjectType? TextField="item=>item.ToString()" ValueField="item=>item" Data="ObjectTypes">
-                                @SelectedObjectType
+            <Div Style="font-size:0.8em;align-self: center;">
+
+                    <Addons Width="Width.Is100">
+                        <Addon AddonType="AddonType.Start">
+                            <DropdownList Color=Color.Primary
+                                          @bind-SelectedValue=@SearchService.SeachObjectType
+                                          TItem="ActiveDirectoryObjectType?"
+                                          TValue=ActiveDirectoryObjectType?
+                                          TextField="item=>item.ToString()"
+                                          ValueField="item=>item"
+                                          Data="ObjectTypes">
+                            @SearchService.SeachObjectType
                             </DropdownList>
-                        </Div>
-                    </Div>
+                        </Addon>
+                    <Addon AddonType="AddonType.Body" >
+                        <Div Style="width: 1%;flex: 1 1 auto;">
+                            <ADAutoComplete SearchDisabled=@SearchService.IncludeDisabled @bind-SearchTerm="@SearchService.SearchTerm" />
+                            </Div>
+                        </Addon>
 
-                </Column>
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is9.OnFullHD.Is8.OnDesktop.Is7.OnTablet">
-                         <ADAutoComplete @bind-SearchObjectType=SelectedObjectType @bind-SearchTerm="@SearchTerm" @bind-SearchDisabled=@SearchDisabledObjects />
+                        @if (UserStateService?.CurrentUserState?.IsSuperAdmin == true || UserStateService?.CurrentUserState?.DirectoryUser?.CanSearchDisabled == true)
+                        {
+                        var buttonColor = Color.Danger;
+                        if (!SearchService.IncludeDisabled)
+                        {
+                            buttonColor = Color.Success;
+                        }
+                        <Addon AddonType="AddonType.Body">
 
+                              
+                                <Button Type="ButtonType.Button" Clicked=@(async()=>{
+                                SearchService.IncludeDisabled= !SearchService.IncludeDisabled;
+                                    await InvokeAsync(StateHasChanged);
+                                    }) Color=buttonColor>
+                                    Enabled Only
+                                </Button>
 
-                </Column>
-                <Column Style="align-self: center;" ColumnSize="ColumnSize.Is1.OnFullHD.Is2.OnDesktop.Is2.OnTablet">
-                    @if (Searcher?.SearchState == SearchState.Collecting)
-                    {
-                        <Button Float="Float.End" Type="ButtonType.Button" Clicked=@(()=>{
-                            disableCancel = true;
-                            Searcher.Cancel();
-                            }) Color="Color.Primary" Disabled=@disableCancel>
-                            Cancel
-                        </Button>
+                                 
+                               
 
-                    }
-                    else
-                    {
-                        <Button Float="Float.End" Type="ButtonType.Submit" Color="Color.Primary">Search</Button>
+                            </Addon>
 
-                    }
+                        }
+                        <Addon AddonType="AddonType.End">
 
-                </Column>
-            </Row>
+                            @if (Searcher?.SearchState == SearchState.Collecting)
+                            {
+                                <Button Float="Float.End" Type="ButtonType.Button" Clicked=@(()=>{
+                                    disableCancel = true;
+                                    Searcher.Cancel();
+                                    }) Color="Color.Primary" Disabled=@disableCancel>
+                                    Cancel
+                                </Button>
+
+                            }
+                            else
+                            {
+                                <Button Float="Float.End" Type="ButtonType.Submit" Color="Color.Primary">Search</Button>
+
+                            }
+
+                        </Addon>
+                    </Addons>
+            </Div>
         </BarBrand>
     </Bar>
 
@@ -54,11 +82,12 @@
 
 @code {
     List<ActiveDirectoryObjectType?> ObjectTypes = new List<ActiveDirectoryObjectType?> { ActiveDirectoryObjectType.All, ActiveDirectoryObjectType.User, ActiveDirectoryObjectType.Group, ActiveDirectoryObjectType.OU, ActiveDirectoryObjectType.Computer };
-    [Parameter]
-    public RenderFragment ChildContent { get; set; }
 
-    [CascadingParameter]
+
     public ADSearch Searcher { get; set; } = new ADSearch();
+
+
+
 
     [Parameter]
     public EventCallback OnSubmit { get; set; }
@@ -67,32 +96,6 @@
     public string Text { get; set; }
 
     bool disableCancel = false;
-
-
-      string _searchTerm;
-    /// <summary>
-    /// The search term that comes from the search text box
-    /// </summary>
-    public string? SearchTerm { get=>_searchTerm; set
-        {
-            if (_searchTerm == value) return;
-            _searchTerm = value;
-            InvokeAsync(StateHasChanged);
-        }
-    }
-
-    ActiveDirectoryObjectType? _selectedObjectType;
-    [Parameter]
-    public ActiveDirectoryObjectType? SelectedObjectType {
-        get=>_selectedObjectType;
-        set{
-            if(_selectedObjectType == value) return;
-            _selectedObjectType = value;
-            SelectedObjectTypeChanged.InvokeAsync(value);
-        }
-    }
-    [Parameter]
-    public EventCallback<ActiveDirectoryObjectType?> SelectedObjectTypeChanged { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
@@ -108,20 +111,5 @@
     }
 
 
-  
-    bool _searchDisabledObjects;
-    /// <summary>
-    /// Indicates whether to search for disabled
-    /// Active Diretory Entries
-    /// </summary>
-    public bool SearchDisabledObjects
-    {
-        get => _searchDisabledObjects; set
-        {
-            if (_searchDisabledObjects == value) return;
-            _searchDisabledObjects = value;
-            InvokeAsync(StateHasChanged);
 
-        }
-    }
 }
