--- a/BLAZAM/Pages/Install/Authentication.razor
+++ b/BLAZAM/Pages/Install/Authentication.razor
@@ -5,29 +5,63 @@
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
 @using BLAZAM.Server.Data.Services.Email;
 @layout InstallLayout
-@inject IDbContextFactory<DatabaseContext> DbFactory
-@inject NavigationManager NavManager
-@inject HttpClient HttpClient
+@inherits ValidatedForm
 
-<h3>Authentication</h3>
-<div>
-<h6>Please set a secure admin password. This account will have total application access.</h6>
-<b>Username:</b><p>Admin</p>
-<b>Password:</b><br />
-<form @onsubmit="SubmitForm">
-<input @bind="@adminPassword" type="password"/><br />
-<button class="btn btn-primary">Save Password</button>
-</form>
-    <div class="@showError">
-        @errorText
-    </div>
-</div>
+<Heading Size="HeadingSize.Is3">Authentication</Heading>
+<Div>
+    <Heading Size="HeadingSize.Is6">
+        Please set a secure admin password.
 
-<br />
-@{
-    DatabaseContext context = DbFactory.CreateDbContext();
-   
-}
+    </Heading>
+    <Heading Size="HeadingSize.Is6">
+
+        This account will have total application access.
+    </Heading>
+    <Form @onsubmit="SubmitForm">
+        <SettingsField>
+            <FieldLabel>Username</FieldLabel>
+            <FieldBody>
+                <TextEdit Text="admin" Disabled />
+            </FieldBody>
+        </SettingsField>
+        <Validations Model=adminPassword StatusChanged="OnValidation">
+            <Validation Validator="AppValidationRule.IsValidPassword">
+                <SettingsField>
+                    <FieldLabel>Password</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password" @bind-Text=adminPassword>
+                            <Feedback>
+                                <ValidationError>
+                                    The password does not meet the minimum complexity requirements.
+                                </ValidationError>
+                            </Feedback>
+                            </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+            <Validation Validator="Matches">
+                <SettingsField>
+                    <FieldLabel>Confirm Password</FieldLabel>
+                    <FieldBody>
+                        <TextEdit Role="TextRole.Password">
+                            <Feedback>
+                                <ValidationError>
+                                    The passwords do not match.
+                                </ValidationError>
+                            </Feedback>
+                        </TextEdit>
+                    </FieldBody>
+                </SettingsField>
+            </Validation>
+        </Validations>
+
+
+        <Button Disabled=saveDisabled Color="Color.Primary" Type="ButtonType.Submit">Save Password</Button>
+    </Form>
+
+</Div>
+
+
 @code {
     [Parameter]
     public EventCallback StepCompleted { get; set; }
@@ -35,21 +69,27 @@
     private string errorText = "";
     private string showError = "d-none";
     public string adminPassword = "";
-    public async void SubmitForm(){
+    public async void SubmitForm()
+    {
         DatabaseContext context = DbFactory.CreateDbContext();
         try
         {
             context.AuthenticationSettings.FirstOrDefault().AdminPassword = adminPassword;
-            
+
             await context.SaveChangesAsync();
             StepCompleted.InvokeAsync();
 
-        }catch(Exception ex)
+        }
+        catch (Exception ex)
         {
-            errorText = ex.Message+" "  + ex.InnerException?.Message;
+            errorText = ex.Message + " " + ex.InnerException?.Message;
             showError = "";
 
         }
         await InvokeAsync(StateHasChanged);
+    }
+    async void Matches(ValidatorEventArgs e)
+    {
+        e.Status = ((adminPassword.Equals(e.Value as string)) ? ValidationStatus.Success : ValidationStatus.Error);
     }
 }
