Minor Setup Improvements

--- a/BLAZAM/Pages/Home.razor
+++ b/BLAZAM/Pages/Home.razor
@@ -4,7 +4,16 @@
 @using BLAZAM.Server.Shared.UI.Dashboard.Widgets;
 @using BLAZAM.Common.Data.ActiveDirectory.Interfaces;
 @using BLAZAM.Server.Data.Services.Email;
+@if (MOTD.HasValue && MOTD.Value.ToString()!="")
+{
+    <Alert Background="Background.Light" TextColor="TextColor.Dark" Visible>
 
+    <AlertMessage>
+        @MOTD.Value
+
+    </AlertMessage>
+</Alert>
+}
 <DropContainer @ref=widgetContainer TItem="Widget" @bind-Items="widgets" ItemsFilter="@((item, dropZone) => item.Slot == dropZone)" ItemDropped="@ItemDropped" Flex="Flex.Wrap.Grow.Is1">
     <ChildContent>
         <DropZone TItem="Widget" Name="slot1" AllowReorder Border="Border.Rounded" Background="Background.Light" Margin="Margin.Is3" Flex="Flex.Grow.Is1" />
@@ -16,11 +25,11 @@
         <Card Shadow="Shadow.Default" Margin="Margin.Is3.OnY" Background="Background.Secondary" TextColor="TextColor.Light">
             <CardBody>
                 <DynamicComponent Type="@context.GetType()" />
-                <AppCloseButton Clicked=@(()=>{RemoveWidget(context);}) Position="Position.Absolute" style="right:10px;top:15px"/>
+                <AppCloseButton Clicked=@(()=>{RemoveWidget(context);}) Position="Position.Absolute" style="right:10px;top:15px" />
             </CardBody>
         </Card>
     </ItemTemplate>
-</DropContainer>
+    </DropContainer>
 
 
 
@@ -31,8 +40,9 @@
 
 
 
-@code {
-    DropContainer<Widget> widgetContainer;
+    @code {
+    MarkupString? MOTD;
+    DropContainer<Widget>? widgetContainer;
     List<Widget> widgets = new List<Widget>();
     private Task ItemDropped(DraggableDroppedEventArgs<AppComponent> dropItem)
     {
@@ -42,7 +52,14 @@
     protected override Task OnInitializedAsync()
     {
         widgets = new List<Widget>(Widgets.Available(UserStateService.CurrentUserState));
-
+        try
+        {
+            MOTD = (MarkupString)Context.AppSettings.FirstOrDefault().MOTD;
+        }
+        catch
+        {
+            
+        }
         return base.OnInitializedAsync();
     }
 
@@ -57,5 +74,5 @@
         await InvokeAsync(StateHasChanged);
         widgetContainer.Refresh();
     }
-    
+
 }
