--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -46,6 +46,8 @@
 
                     </LayoutContent>
                     <LayoutFooter>
+                     <DirectoryConnectingIndicator/>
+                        
                         <AppFooter />
                         @if (Program.InDebugMode)
                         {
