--- a/BLAZAM/Shared/Layouts/MinLayout.razor
+++ b/BLAZAM/Shared/Layouts/MinLayout.razor
@@ -27,6 +27,11 @@
         </LayoutContent>
 
         <LayoutFooter>
+            @if (Program.InstallationCompleted)
+            {
+                <DirectoryConnectingIndicator />
+
+            }
             <AppFooter />
 
         </LayoutFooter>
