--- a/BLAZAM/Pages/Install/InstallDatabase.razor
+++ b/BLAZAM/Pages/Install/InstallDatabase.razor
@@ -25,6 +25,7 @@
 {
     <Div>
     <Heading Size="HeadingSize.Is5">The database is ready to install.</Heading>
+        <Heading Size="HeadingSize.Is5">Type</Heading><Text>@(Context.Database.IsSqlServer() ? "SQL" : "SQLite")</Text>
         <Heading Size="HeadingSize.Is5">Server</Heading><Text>@DatabaseContext.ConnectionString.ServerAddress</Text>
         <Heading Size="HeadingSize.Is5">Port</Heading><Text>@DatabaseContext.ConnectionString.ServerPort</Text>
         <Heading Size="HeadingSize.Is5">Database</Heading><Text>@DatabaseContext.ConnectionString.Database</Text>
