--- a/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
+++ b/BLAZAM/Shared/UI/Settings/ActiveDirectoryStatusPanel.razor
@@ -95,6 +95,8 @@
                             {
                                 _encryptedStatus = true;
                             }
+                            showProgress = Visibility.Invisible;
+
                             DirectoryConnected.InvokeAsync();
 
                         }
