Install page protection

--- a/BLAZAM/Pages/Install/Install.razor
+++ b/BLAZAM/Pages/Install/Install.razor
@@ -82,6 +82,13 @@
     [Parameter]
     public string selectedStep { get; set; } = "0";
 
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        if (Program.InstallationCompleted)
+            Nav.NavigateTo("/");
+    }
+
     protected override async Task OnInitializedAsync()
     {
         await base.OnInitializedAsync();
