Fix for dynamic "static" files

--- a/BLAZAM/Pages/Static.cshtml
+++ b/BLAZAM/Pages/Static.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/static/{method}/{data}"
-@model BLAZAM.Server.Pages.StaticAssets
+﻿@page "/static/{Method}/{Data}"
+@model BLAZAM.Server.Pages.StaticModel
 @{
 }
