--- a/BLAZAM/Shared/Layouts/MainLayout.razor
+++ b/BLAZAM/Shared/Layouts/MainLayout.razor
@@ -63,6 +63,9 @@
                 <Layout>
                     <LayoutContent Style="height: 100vh;overflow: auto;">
                         <CascadingValue Value="this">
+                            @{
+                                var trest = "";
+                            }
                             @Body
                         </CascadingValue>
                     </LayoutContent>
