--- a/BLAZAM/App.razor
+++ b/BLAZAM/App.razor
@@ -13,6 +13,9 @@
 
                     <Router AppAssembly="@typeof(App).Assembly">
                         <Found Context="routeData">
+                    @{
+                        var test = routeData;
+                    }
                             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                                 <Authorizing>
                                     Authorizing...
@@ -20,7 +23,8 @@
                                 <NotAuthorized>
                                     @if (!context.User.Identity.IsAuthenticated)
                                     {
-                                        <PageTitle>Login</PageTitle>
+                                var test2 = test;
+                                <PageTitle>Login</PageTitle>
                                         <LayoutView Layout="@typeof(LoginLayout)">
                                             <BLAZAM.Server.Pages.Login />
                                         </LayoutView>
