New Add Member modal

--- a/BLAZAM/Pages/Groups/ViewGroup.razor
+++ b/BLAZAM/Pages/Groups/ViewGroup.razor
@@ -83,6 +83,9 @@
         <AppModal TextColor="TextColor.Dark" Title="Assign To" @ref=@AssignToModal>
             <AssignToModalContent OnGroupMembershipChange=@((change)=>{AssignToModal.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
         </AppModal>
+        <AppModal TextColor="TextColor.Dark" Title="Assign To" @ref=@AssignMemberModal>
+            <AssignToModalContent OnGroupMembershipChange=@((change)=>{AssignMemberModal.Hide(); InvokeAsync(StateHasChanged);}) DirectoryModel="Group" />
+        </AppModal>
         <AppModal TextColor="TextColor.Dark" Title="Move To" @ref=@MoveToModal>
             @if (MoveToModal.IsShown)
             {
@@ -232,8 +235,7 @@ InvokeAsync(StateHasChanged);
 
 
 @code {
-
-
+    AppModal? AssignMemberModal;
 
 
     List<IGroupableDirectoryModel> Members = new();
